objects/SalesPlanResult_Amount__c.object
<CustomObject>
    <description>受注計画・受注予定・受注実績：集計用データ</description>
    <fields>
        <fullName>Field1__c</fullName>
        <label>集計区分</label>
        <picklist>
            <picklistValues>
                <fullName>自社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SVC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>他社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>受託分析</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>講習会・セミナー</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>×金額</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <formula>CASE(
 TEXT(Field1__c)
, &quot;自社&quot;, SalesPR_Key__r.SNET_SYTH__c 
, &quot;SVC&quot;,  SalesPR_Key__r.SVCM_SYTH__c 
,&quot;他社&quot;, SalesPR_Key__r.SOCM_SYTH__c 
,0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>金額</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OUTIDKey__c</fullName>
        <externalId>true</externalId>
        <label>外部Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesPR_Key__c</fullName>
        <label>受注予実</label>
        <referenceTo>Sales_Plan_Result__c</referenceTo>
        <relationshipLabel>受注予実_金額集計</relationshipLabel>
        <relationshipName>SalesPRspZt</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>受注予実_金額集計</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SalesPR_Key__c</columns>
        <columns>Field1__c</columns>
        <columns>Field3__c</columns>
        <columns>Field4__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>受注予実_金額集計</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>